.gsd.migrating/exec/6dd8de0b-6ff6-41e1-b019-1fe74ec6cec7.stderr
   Compiling cmt-rs v0.1.0 (/mnt/j/cmt-rs)
warning: unused import: `ACTION_ARCHIVE_PATCHER_LABEL`
  --> src/services/overview.rs:19:13
   |
19 | ...   ACTION...ABEL, A...
   |       ^^^^^^...^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src/services/overview.rs:97:61
    |
 97 | ... = effective_install_type(install...(), i...
    |       ---------------------- ^^^^^^^...^^ expected `Option<...stallation>`, found `Option<&&Fallout4Installation>`
    |       |
    |       arguments to this function are incorrect
    |
    = note: expected enum `Option<...>` (`domain::discovery::Fallout4Installation`)
               found enum `Option<...>` (`&domain::discovery::Fallout4Installation`)
note: function defined here
   --> src/services/overview.rs:421:4
    |
421 | fn...nstall_type(
    |   ...^^^^^^^^^^^
422 |    ...stallation>,
    |    ...-----------
    = note: the full name for the type has been written to '/mnt/j/cmt-rs/target/debug/deps/cmt_rs-76e0b74b0844212e.long-type-14560472371285627383.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: try removing the method call
    |
 97 -         let effective_install_type = effective_install_type(installation.as_ref(), input.binaries);
 97 +         let effective_install_type = effective_install_type(installation, input.binaries);
    |

error[E0308]: mismatched types
   --> src/services/overview.rs:101:37
    |
101 | ...   a...a_problem(installation.as....
    |       -...--------- ^^^^^^^^^^^^^^^...cted `Option<&Fallout4Installation>`, found `Option<&&Fallout4Installation>`
    |       |
    |       arguments to this function are incorrect
    |
    = note: expected enum `Option<...>` (`domain::discovery::Fallout4Installation`)
               found enum `Option<...>` (`&domain::discovery::Fallout4Installation`)
note: function defined here
   --> src/services/overview.rs:484:4
    |
484 | fn...ata_problem(
    |   ...^^^^^^^^^^^
485 |    ...stallation>,
    |    ...-----------
    = note: the full name for the type has been written to '/mnt/j/cmt-rs/target/debug/deps/cmt_rs-76e0b74b0844212e.long-type-3806054656053953203.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: try removing the method call
    |
101 -         append_missing_data_problem(installation.as_ref(), &mut problems);
101 +         append_missing_data_problem(installation, &mut problems);
    |

For more information about this error, try `rustc --explain E0308`.
warning: `cmt-rs` (bin "cmt-rs" test) generated 1 warning
error: could not compile `cmt-rs` (bin "cmt-rs" test) due to 2 previous errors; 1 warning emitted
